# Gengine

./: .gitignore  .gitmodules  CMakeLists.txt
examples/: moving_triangle.cpp  rectangle.cpp  simple_2D_texture.cpp  triangles.cpp
examples/shaders/: rectangle_vertex.shader  rotation_triangle_fragment.shader  rotation_triangle_vertex.shader
include/: window.h
include/core/primitives/shader/: shader.h
include/core/primitives/texture/: texture.h
include/core/primitives/vertex/: ebo.h  gl_buffer_obj_base.h  vao.h  vbo.h
include/core/shader/: shader.h
include/core/vertex/: vao.h  vbo.h
resources/shaders/: fragment.shader  vertex.shader
src/core/primitives/shader/: shader.cpp
src/core/primitives/texture/: texture.cpp
src/core/primitives/vertex/: ebo.cpp  gl_buffer_obj_base.cpp  vao.cpp  vbo.cpp
src/core/shader/: shader.cpp
src/core/vertex/: vao.cpp  vbo.cpp
